amended text changes

--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
             <div class="container">
 
                 <div class="row">
-
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
                         <div class="features-wrap">
@@ -242,7 +241,6 @@
                             <p>9 Floors</p>
                         </div>
                     </div>
-        
                 </div>
 
             </div>
@@ -252,7 +250,7 @@
 
             <div class="map-title">
                 <span class="dash-top fadein">—</span>
-                <h2>Some title <span class="title-serif">here.</span></h2>
+                <h2>Easy access from <span class="title-serif">any part of the country.</span></h2>
                 <span class="dash-top fadein">—</span>
             </div>
 
