--- a/the-building.html
+++ b/the-building.html
@@ -137,67 +137,7 @@
                         </div>
                 </div>
 
-                <!-- <div class="row">
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>State of delivery</h4>
-                            <p>Highest quality of finish</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Fully customizable</h4>
-                            <p>Create any layout you need</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Transparent &amp; Bright</h4>
-                            <p>The glass facade means the building is bursting with light</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Facilities</h4>
-                            <p>Showers &amp; changing rooms on each floor</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Parking</h4>
-                            <p>A parking ratio of 1:98 + additional parking is possible</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Large floors</h4>
-                            <p>9 floors each 1,400sq m with 3.35m high ceilings</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Sustainable</h4>
-                            <p>Label A with WKO-System for heating and cooling</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star-alt.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Shared spaces</h4>
-                            <p>Enjoy more room for meetings at Spaces in Hofplein 20</p>
-                        </div>
-                    </div>
-                </div> -->
-
                 <div class="row">
-
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
                         <div class="features-wrap">
@@ -216,7 +156,7 @@
                         <img src="img/star.svg" class="fadein">
                         <div class="features-wrap">
                             <h4>Location</h4>
-                            <p>City centre</p>
+                            <p>Central business district</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -240,14 +180,6 @@
                             <p>9 Floors</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Services</h4>
-                            <p>Mechanical ventilation, top cooling, lifts, cable trays &amp; toilets</p>
-                        </div>
-                    </div>
-        
                 </div>
 
             </div>
@@ -389,9 +321,9 @@
             </div>
         </section>
 
-        <!-- <section>
+        <section>
             <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-        </section> -->
+        </section>
         
     </main>
 
