--- a/location.html
+++ b/location.html
@@ -65,17 +65,14 @@
     </section>
 
     <section class="international-map">
-
-        <div class="slider-title">
+        <div class="map-title">
             <span class="dash-top fadein">—</span>
-            <h2>Some title <span class="title-serif">here.</span></h2>
+            <h2>Easy access from <span class="title-serif">any part of the country.</span></h2>
             <span class="dash-top fadein">—</span>
         </div>
-
         <div class="fadein">
             <img src="img/international-map.jpeg">
         </div>
-        
     </section>
 
     <section>
