--- a/the-building.html
+++ b/the-building.html
@@ -58,7 +58,7 @@
 
         <div class="video-container">
             <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
-            <video id="video-background" loop muted playsinline autoplay>
+            <video autoplay loop autobuffer muted plays-inline id="video-background">
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
@@ -68,9 +68,9 @@
     <!-- MAIN -->
     <main>
 
-        <section class="statement-title">
+        <section class="statement-title alt">
             <span class="dash-top fadein" >—</span>
-            <h2>Everything you'll need <span class="title-serif">all in one place.</span></h2>
+            <h2>Everything you need <span class="title-serif">all in one place.</span></h2>
             <span class="dash-bottom fadein">—</span>
         </section>
 
