added partner logo and added alt tags to all images

--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Hofplein 19 | Contact</title>
+        <title>Hofplein 19 | Contact Us</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="name">
         <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta name="keywords" content="Rotterdam, real estate, hofplein 19, office spaces">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
         <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
@@ -95,14 +94,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-4 flex">
-                    <img src="img/directions.svg" class="fadein">
+                    <img src="img/directions.svg" class="fadein" alt="directions icon">
                     <div>
                         <h4>Plan your visit</h4>
                         <p><a href="https://www.google.com/maps/place/Hofplein+19,+3032+AC+Rotterdam/@51.9251123,4.477353,18z/" target="_blank">Directions</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-4 flex">
-                    <img src="img/call.svg" class="fadein">
+                    <img src="img/call.svg" class="fadein" alt="call us icon">
                     <div>
                         <h4>Call Us</h4>
                         <h5>CBRE</h5>
@@ -112,7 +111,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-4 flex">
-                    <img src="img/email.svg" class="fadein">
+                    <img src="img/email.svg" class="fadein" alt="email us icon">
                     <div>
                         <h4>Email Us</h4>
                         <p><a href="mailto:contact@hofplein19.nl" target="_blank">contact@hofplein19.nl</a></p>
@@ -129,29 +128,33 @@
                     <h2 class="partner-title">Partners</h2>
                 </div>
                 <div class="col-8 col-md-4 text-center mb-l">
-                    <img src="img/ppf-holding.png">
+                    <img src="img/ppf-holding.png" alt="logo">
                     <p class="mt-md">Owner</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-5th">
-                    <img src="img/OZ_logo-fade.jpg">
+                    <img src="img/OZ_logo-fade.jpg" alt="logo">
                     <p>Architect</p>
                 </div>
                 <div class="col-5th">
-                    <img src="img/nl-asset.jpg">
+                    <img src="img/nl-asset.jpg" alt="logo">
                     <p>Asset Manager</p>
                 </div>
                 <div class="col-5th">
-                    <img src="img/Groenedijk.jpg">
+                    <img src="img/Groenedijk.jpg" alt="logo">
                     <p>Contractor</p>
                 </div>
                 <div class="col-5th">
-                    <img src="img/cbre logo.jpg">
+                    <img src="img/cbre logo.jpg" alt="logo">
                     <p>Estate agent</p>
                 </div>
                 <div class="col-5th">
-                    <img src="img/MIK_LOGO_NEW.jpg">
+                    <img src="img/MIK_LOGO_NEW.jpg" alt="logo">
+                    <p>Estate agent</p>
+                </div>
+                <div class="col-5th">
+                    <img src="img/jll-logo.jpeg" alt="logo">
                     <p>Estate agent</p>
                 </div>
             </div>
@@ -165,12 +168,11 @@
     </main>
 
     <footer>
-        <img src="img/hp-logo-alt.svg">
-        <img src="img/up-icon.svg" id="to-top" class="up">
+        <img src="img/hp-logo-alt.svg" alt="logo">
+        <img src="img/up-icon.svg" id="to-top" class="up" alt="scroll up icon">
     </footer>
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
