--- a/history.html
+++ b/history.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Hofplein 19 | History</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="name">
         <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta name="keywords" content="Rotterdam, real estate, hofplein 19, office spaces">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
         <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
@@ -76,25 +75,6 @@
         </div>
     </section>
 
-    <!-- <section class="content-block--alt">
-        <div class="container-fluid">
-            <div class="background-color--alt"></div>
-            <div class="row">
-                <div class="col-md">
-                    <img src="img/optimized-future.jpeg" class="fadein">
-                </div>
-                <div class="col-md order-first">
-                    <div>
-                        <span class="dash-top fadein">—</span>
-                        <h2>Some other kinda title <span class="title-serif">to go here.</span></h2>
-                        <span class="dash-top fadein">—</span>
-                        <p>Some text to go inside this area here right here right blooming here.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
     <section class="quote-block">
         <div class="container">
             <div class="row">
@@ -106,23 +86,6 @@
         </div>
     </section>
 
-    <!-- <section class="location">
-        <div class="container">
-            <div class="row justify-content-md-center">
-                <div class="col col-lg-6">
-                    <span class="dash-top fadein">—</span>
-                    <h2>Located in the <span class="title-serif">heart of the city.</span></h2>
-                    <span class="dash-top fadein">—</span>
-                </div>
-            </div>
-        </div>
-        <div class="fadein">
-            <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
-                <source src="media/website-located-in-the-heart.mp4" type="video/mp4">
-            </video>
-        </div>
-    </section> -->
-
     <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
     </section>
@@ -130,12 +93,11 @@
     </main>
 
     <footer>
-        <img src="img/hp-logo-alt.svg">
-        <img src="img/up-icon.svg" id="to-top" class="up">
+        <img src="img/hp-logo-alt.svg" alt="logo">
+        <img src="img/up-icon.svg" id="to-top" class="up" alt="scroll up icon">
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
