--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Hofplein 19 | Where the city gets going</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="name">
         <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta name="keywords" content="Rotterdam, real estate, hofplein 19, office spaces">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
         <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
@@ -56,11 +55,11 @@
 
         <div class="video-container">
             <!-- VIDEO -->
-            <video autoplay loop autobuffer muted plays-inline id="video-background">
+            <video autoplay loop muted playsinline id="video-background">
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
-        <img src="img/chevron-down.svg" class="scroll-icon">
+        <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down">
     </section>
     <!-- MAIN -->
     <main>
@@ -76,7 +75,7 @@
             <div class="background-color"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/building-front.jpeg" class="fadein">
+                    <img src="img/building-front.jpeg" class="fadein" alt="building detail">
                 </div>
                 <div class="col-md">
                     <div>
@@ -96,35 +95,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Additional parking space</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Shared facilities at Spaces Hofplein 20</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Transparent &amp; bright</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Large floors &amp; high ceilings</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Highest quality of finish</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Shower &amp; changing rooms</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>WKO system for heating &amp; cooling</p>
                 </div>
             </div>
@@ -144,19 +143,19 @@
             <div id="carouselExampleControls" class="carousel slide fadein" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="...">
+                        <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="work to the max">
                         <div class="carousel-caption d-none d-md-block">
                             <h6>Work to the max</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="...">
+                        <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="work and meet">
                         <div class="carousel-caption d-none d-md-block">
                             <h6>Work &amp; meet</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="...">
+                        <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="work meet and brainstorm">
                         <div class="carousel-caption d-none d-md-block">
                             <h6>Work, meet &amp; brainstorm</h6>
                         </div>
@@ -180,7 +179,7 @@
             <div class="background-color--alt"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/building-windows.jpeg" class="fadein">
+                    <img src="img/building-windows.jpeg" class="fadein" alt="building windows">
                 </div>
                 <div class="col-md order-first">
                     <div>
@@ -200,42 +199,42 @@
 
                 <div class="row">
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Rental price</h4>
                             <p>€200 per squre meter per year</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Surface</h4>
                             <p>14,444 sq m (in units from 1,411 sq m)</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Location</h4>
                             <p>Central business district</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Energy rating</h4>
                             <p>Rating: A</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Construction</h4>
                             <p>1960</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Number of floors</h4>
                             <p>9 Floors</p>
@@ -255,7 +254,7 @@
             </div>
 
             <div class="fadein">
-                <img src="img/international-map.jpeg">
+                <img src="img/international-map.jpeg" alt="international map">
             </div>
         </section>
 
@@ -263,13 +262,13 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <img src="img/landscape-01.jpeg" class="fadein">
+                        <img src="img/landscape-01.jpeg" class="fadein" alt="hofbogen">
                         <h3>Where corporate &amp; <span class="title-serif">creative meet</span></h3>
                         <p>Located on a dynamic crossroad of both the corporate and creative areas of Rotterdam, with everything within walking distance of the building.</p>
                         <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                     <div class="col-12 col-md-6">
-                        <img src="img/landscape-02.jpeg" class="fadein">
+                        <img src="img/landscape-02.jpeg" class="fadein" alt="spaces">
                         <h3>Space-sharing at <span class="title-serif">Spaces HP 20</span></h3>
                         <p>You'll also have access to more meeting rooms and creative spaces in our neighbouring building at <a href="https://www.spacesworks.com/rotterdam/hofplein/meeting-rooms/" target="_blank" class="inline-link">Spaces</a> in Hofplein 20, with room sizes from 6 to 400 people.</p>
                         <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
@@ -285,8 +284,8 @@
     </main>
 
     <footer>
-        <img src="img/hp-logo-alt.svg">
-        <img src="img/up-icon.svg" id="to-top" class="up">
+        <img src="img/hp-logo-alt.svg" alt="logo">
+        <img src="img/up-icon.svg" id="to-top" class="up" alt="scroll up icon">
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
