--- a/the-building.html
+++ b/the-building.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Hofplein 19 | The building</title>
+        <title>Hofplein 19 | The Building</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="name">
         <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta name="keywords" content="Rotterdam, real estate, hofplein 19, office spaces">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
         <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
@@ -58,11 +57,11 @@
 
         <div class="video-container">
             <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
-            <video autoplay loop autobuffer muted plays-inline id="video-background">
-                <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
+            <video autoplay loop muted playsinline id="video-background">
+                <source src="media/website-the-building_720.mp4" type="video/mp4">
             </video>
         </div>
-        <img src="img/chevron-down.svg" class="scroll-icon">
+        <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down icon">
     </section>
 
     <!-- MAIN -->
@@ -77,47 +76,47 @@
         <section class="diagram">
 
             <div class="fadein">
-                <img src="img/hp-key.jpeg">
+                <img src="img/hp-key.jpeg" alt="building front">
             </div>
             
             <div class="row diagram-info">
                 <div class="col-12 col-md-4 flex">
-                    <img src="img/01-icon.svg" class="fadein">
+                    <img src="img/01-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Rooftop bar</h4>
                         <p>By Ron de Jong</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
-                    <img src="img/02-icon.svg" class="fadein">
+                    <img src="img/02-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Spaces</h4>
                         <p>Shared meeting rooms at Hofplein 20</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
-                    <img src="img/03-icon.svg" class="fadein">
+                    <img src="img/03-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Workspaces</h4>
                         <p>9 floors from 1,411 sq m</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
-                    <img src="img/04-icon.svg" class="fadein">
+                    <img src="img/04-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Shell</h4>
                         <p>Petrol station located underneath the building</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
-                    <img src="img/05-icon.svg" class="fadein">
+                    <img src="img/05-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Starbucks</h4>
                         <p>Enjoy a coffee at Starbucks located underneath the building</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
-                    <img src="img/06-icon.svg" class="fadein">
+                    <img src="img/06-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Deli19 Lunchbar</h4>
                         <p>Brasserie by Ron de Jong</p>
@@ -139,42 +138,42 @@
 
                 <div class="row">
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Rental price</h4>
                             <p>€200 per squre meter per year</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Surface</h4>
                             <p>14,444 sq m (in units from 1,411 sq m)</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Location</h4>
                             <p>Central business district</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Energy rating</h4>
                             <p>Rating: A</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Construction</h4>
                             <p>1960</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
+                        <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Number of floors</h4>
                             <p>9 Floors</p>
@@ -197,25 +196,25 @@
                 <div id="carouselExampleControls" class="carousel slide fadein" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="...">
+                            <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="work meet and brainstorm">
                             <div class="carousel-caption d-none d-md-block">
                                 <h6>Work, meet &amp; brainstorm</h6>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/slider-01.jpeg" class="d-block w-100" alt="...">
+                            <img src="img/slider-01.jpeg" class="d-block w-100" alt="artist interpretation of layout">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="...">
+                            <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="work to the max">
                             <div class="carousel-caption d-none d-md-block">
                                 <h6>Work to the max</h6>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/slider-02.jpeg" class="d-block w-100" alt="...">
+                            <img src="img/slider-02.jpeg" class="d-block w-100" alt="artist interpretation of layout">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="...">
+                            <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="work and meet">
                             <div class="carousel-caption d-none d-md-block">
                                 <h6>Work &amp; meet</h6>
                             </div>
@@ -234,27 +233,27 @@
 
             <div class="row col-12 col-md-10 mx-auto mt-4">
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Meeting rooms</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Open workspaces</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Quiet work areas</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Scrum rooms</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Flex spaces</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
+                    <img src="img/star.svg" class="fadein" alt="icon">
                     <p>Game room</p>
                 </div>
             </div>
@@ -268,7 +267,7 @@
                     <h2>Feel the emotion of the city <span class="title-serif">inside the building</span></h2>
                     <span class="dash-top fadein">—</span>
                 </div>
-                <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
+                <video autoplay loop muted playsinline class="block-level--video fullwidth">
                     <source src="media/feel-the-emotion_2.mp4" type="video/mp4">
                 </video>
             </div>
@@ -288,7 +287,7 @@
                 <div class="background-color--alt"></div>
                 <div class="row">
                     <div class="col-md">
-                        <img src="img/creative-surrounds.jpeg" class="fadein">
+                        <img src="img/creative-surrounds.jpeg" class="fadein" alt="hofbogen viaduct">
                     </div>
                     <div class="col-md order-first">
                         <div>
@@ -307,7 +306,7 @@
                 <div class="background-color"></div>
                 <div class="row">
                     <div class="col-md">
-                        <img src="img/spaces-hp20.jpeg" class="fadein">
+                        <img src="img/spaces-hp20.jpeg" class="fadein" alt="spaces at hofplein 20">
                     </div>
                     <div class="col-md">
                         <div>
@@ -328,8 +327,8 @@
     </main>
 
     <footer>
-        <img src="img/hp-logo-alt.svg">
-        <img src="img/up-icon.svg" id="to-top" class="up">
+        <img src="img/hp-logo-alt.svg" alt="logo">
+        <img src="img/up-icon.svg" id="to-top" class="up" alt="scroll up icon">
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
