--- a/location.html
+++ b/location.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Hofplein 19 | Location</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="name">
         <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta name="keywords" content="Rotterdam, real estate, hofplein 19, office spaces">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
         <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
@@ -58,7 +57,7 @@
 
     <section class="location">
         <div class="fadein">
-            <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
+            <video autoplay loop muted playsinline class="block-level--video fullwidth">
                 <source src="media/website-located-in-the-heart.mp4" type="video/mp4">
             </video>
         </div>
@@ -71,7 +70,7 @@
             <span class="dash-top fadein">—</span>
         </div>
         <div class="fadein">
-            <img src="img/international-map.jpeg">
+            <img src="img/international-map.jpeg" alt="international map">
         </div>
     </section>
 
@@ -82,8 +81,8 @@
     </main>
 
     <footer>
-        <img src="img/hp-logo-alt.svg">
-        <img src="img/up-icon.svg" id="to-top" class="up">
+        <img src="img/hp-logo-alt.svg" alt="logo">
+        <img src="img/up-icon.svg" id="to-top" class="up" alt="scroll up icon">
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
