--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                     <h2 class="partner-title">Partners</h2>
                 </div>
                 <div class="col-8 col-md-4 text-center mb-l">
-                    <img src="img/ppf-holding.png" alt="logo">
+                    <img src="img/ppf-holding.png" alt="logo" class="fadein">
                     <p class="mt-md">Owner</p>
                 </div>
             </div>
