--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
         <div class="video-container">
             <!-- VIDEO -->
-            <video autoplay loop muted playsinline id="video-background">
+            <video autoplay loop muted playsinline id="video-background" poster="img/nl-asset.jpg">
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
+                <img src="img/landscape-01.jpeg" alt="fallback image">
             </video>
         </div>
         <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down">
