--- a/history.html
+++ b/history.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p>"Hofplein 19 is what we call chic: straight up, a little rough around the edges and made of honest concrete. It's also a massive building in every aspect. We've held onto its original grandeur and gave it a modern face. Reminiscent of yesterday, yet ready for tomorrow."</p>
+                    <p>"Hofplein 19 is what we call straight up, a little rough around the edges and made of honest concrete. It's also a massive building in every aspect. We've held onto its original grandeur and gave it a modern face. Reminiscent of yesterday, yet ready for tomorrow."</p>
                     <p>Oresti Sarafopoulos — <span class="title-serif">OZ Architects</span></p>
                 </div>
             </div>
