--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
         <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down">
     </section>
+
     <!-- MAIN -->
     <main>
         
@@ -76,7 +77,7 @@
             <div class="background-color"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/building-front.jpeg" class="fadein" alt="building detail">
+                    <img src="img/hofplein-entrance.jpg" class="fadein" alt="building detail">
                 </div>
                 <div class="col-md">
                     <div>
@@ -85,7 +86,6 @@
                         <span class="dash-bottom fadein">—</span>
                         <p>Attention to detail was at the heart of the renovation and concious choices were made with regard to material use and energy managment.</p>
                         <p>This has led to a future-ready building with sustainable performance.</p>
-                        <!-- <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a> -->
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Rental price</h4>
-                            <p>€200 per squre meter per year</p>
+                            <p>Starting at €200 per square meter per year</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
