--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
         </div>
 
         <div class="video-container">
-            <!-- VIDEO -->
-            <video autoplay loop muted playsinline id="video-background">
-                <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
-                <!-- <img src="img/landscape-01.jpeg" alt="fallback image"> -->
-            </video>
+            <iframe src="https://player.vimeo.com/video/326309609?background=1&autoplay=1&loop=1&byline=0&title=0" frameborder="0" allow="autoplay" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="video-background"></iframe>
         </div>
         <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down">
     </section>
